# ULM_Probing_VLMs

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml  readme.md  start.bat
.github/workflows/: build-pdf.yml
artifacts/Qwen/Qwen2-VL-2B-Instruct_Test_layer0_run/: config.json  model.pt  optimizer.pt  training_log.csv
artifacts/Qwen/Qwen2-VL-2B-Instruct_Test_layer10_run/: config.json  model.pt  optimizer.pt  training_log.csv
artifacts/Qwen/Qwen2-VL-2B-Instruct_Test_layer11_run/: config.json  model.pt  optimizer.pt  training_log.csv
artifacts/Qwen/Qwen2-VL-2B-Instruct_Test_layer12_run/: config.json  model.pt  optimizer.pt  training_log.csv
artifacts/Qwen/Qwen2-VL-2B-Instruct_Test_layer13_run/: config.json  model.pt  optimizer.pt  training_log.csv
experiments/: caption_experiment.py  category_experiment.py  plot.py  plot_caption_experiment.py  plot_category_experiment.py  random_classifier_exp.py  simple_qwen_probe.ipynb  simple_qwen_probe_caption.ipynb
report/: acl2023.sty  custom.bib  report.synctex(busy)  report.tex
report/expose/: expose.tex
src/configs/: ProbeRunConfig.py
src/data/: dataset_loader.py
src/probes/: classifier.py  classifier_captions.py  classifier_category.py  trainer.py  trainer_captions.py  trainer_category.py
src/prompts/: global_features.txt  local_features.txt
src/utils/: experiment_utils.py  image_utils.py  pre_materialize.py  store_representations.py
src/vllm/: automodel.py  fastvlm.py  qwen.py  vllm.py
tests/: test_gemma.py  test_phi.py  test_qwen.py  test_test.py
(+1451 files in other folders)
