[project]
name = "ulm-probing-vlms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.0",
    "datasets>=4.0.0",
    "matplotlib>=3.10.5",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "qwen-vl-utils>=0.0.11",
    "transformer-lens>=2.16.1",
    "transformers>=4.55.0",
]
