[project]
name = "ulm-probing-vlms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.0",
    "backoff>=2.2.1",
    "bitsandbytes>=0.47.0",
    "datasets>=4.0.0",
    "matplotlib>=3.10.5",
    "peft>=0.17.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "qwen-vl-utils>=0.0.11",
    "scipy>=1.16.1",
    "setuptools>=80.9.0",
    "timm>=1.0.19",
    "torchvision>=0.23.0",
    "transformers==4.50.0",
    "tueplots>=0.2.1",
]
